--- a/index.html
+++ b/index.html
@@ -20,42 +20,44 @@
       <g transform="translate(50, 60)">
         <g class="active" ontouchstart id="b-5" transform="translate(0, 0)">
           <rect rx="1" ry="1" x="-8" y="-8" width="16" height="16"></rect>
+          <rect rx="1" ry="1" x="-8.5" y="-8.5" width="17" height="17"></rect>
           <polygon points="-8,8 8,8 8,-8 -8,-8" />
           <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1">A</text>
         </g>
         <g ontouchstart id="b-4" transform="translate(-20, 0)">
           <rect rx="1" ry="1" x="-8" y="-8" width="16" height="16"></rect>
+          <rect rx="1" ry="1" x="-8.5" y="-8.5" width="17" height="17"></rect>
           <polygon points="-8,8 8,8 8,-8 -4,-8 -8,-4" />
           <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1"></text>
         </g>
         <g ontouchstart id="b-6" transform="translate(20, 0)">
           <rect rx="1" ry="1" x="-8" y="-8" width="16" height="16"></rect>
-          <polygon points="-8,8 8,8 8,-4 4,-8 -8,-8" />
+          <rect rx="1" ry="1" x="-8.5" y="-8.5" width="17" height="17"></rect>          <polygon points="-8,8 8,8 8,-4 4,-8 -8,-8" />
           <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1"></text>
         </g>
         <g ontouchstart id="b-0" transform="translate(-30, 20)">
           <rect rx="1" ry="1" x="-8" y="-8" width="16" height="16"></rect>
-          <polygon points="-8,8 8,8 8,-8 -4,-8 -8,-4" />
+          <rect rx="1" ry="1" x="-8.5" y="-8.5" width="17" height="17"></rect>          <polygon points="-8,8 8,8 8,-8 -4,-8 -8,-4" />
           <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1"></text>
         </g>
         <g ontouchstart id="b-1" transform="translate(-10, 20)">
           <rect rx="1" ry="1" x="-8" y="-8" width="16" height="16"></rect>
-          <polygon points="-8,8 8,8 8,-8 -8,-8" />
+          <rect rx="1" ry="1" x="-8.5" y="-8.5" width="17" height="17"></rect>          <polygon points="-8,8 8,8 8,-8 -8,-8" />
           <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1"></text>
         </g>
         <g ontouchstart id="b-2" transform="translate(10, 20)">
           <rect rx="1" ry="1" x="-8" y="-8" width="16" height="16"></rect>
-          <polygon points="-8,8 8,8 8,-8 -8,-8" />
+          <rect rx="1" ry="1" x="-8.5" y="-8.5" width="17" height="17"></rect>          <polygon points="-8,8 8,8 8,-8 -8,-8" />
           <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1"></text>
         </g>
         <g ontouchstart id="b-3" transform="translate(30, 20)">
           <rect rx="1" ry="1" x="-8" y="-8" width="16" height="16"></rect>
-          <polygon points="-8,8 8,8 8,-4 4,-8 -8,-8" />
+          <rect rx="1" ry="1" x="-8.5" y="-8.5" width="17" height="17"></rect>          <polygon points="-8,8 8,8 8,-4 4,-8 -8,-8" />
           <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1"></text>
         </g>
         <g ontouchstart id="b-7" transform="translate(0, -20)">
           <rect rx="1" ry="1" x="-8" y="-8" width="16" height="16"></rect>
-          <polygon points="-8,8 8,8 8,-4 4,-8 -4,-8 -8,-4" />
+          <rect rx="1" ry="1" x="-8.5" y="-8.5" width="17" height="17"></rect>          <polygon points="-8,8 8,8 8,-4 4,-8 -4,-8 -8,-4" />
           <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1"></text>
         </g>
       </g>
