--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="svg-container">
     <svg viewBox="0 0 100 100">
       <g transform="translate(50, 15)">
-        <text alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1">INPUT</text>
+        <text id="text-input" alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1">INPUT</text>
       </g>
       </g>
       <g transform="translate(50, 60)">
@@ -68,11 +68,12 @@
 <footer>
   <nav>
     <ol>
-      <li>DELETE</li>
-      <li><button name="enter">ENTER
-
-        </button></li>
-      <li>SHUFFLE</li>
+      <li><button class="tertiary" name="hint">HINT</button></li>
+      <li>
+      <button class="tertiary" name="delete">DELETE</button>
+        <button name="enter">ENTER</button>
+      </li>
+      <li><button class="tertiary" name="shuffle">SHUFFLE</button</li>
     </ol>
   </nav>
 </footer>
