--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <article>
   <div class="svg-container">
     <svg viewBox="0 0 100 100">
+    <g transform="translate(50, 5)">
+      <text id="plum" alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="0">NICE</text>
+    </g>
       <g transform="translate(50, 15)">
         <text id="text-input" alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="1">INPUT</text>
       </g>
