--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
       <dt>Total played</dt>
       <dd>99</dd>
     </dl>
-    <button name="share">Share</button>
+    <textarea readonly id="zigga">GAME 1 🤖👻🟧🟧▪️▫️◾️</textarea>
+    <button class="share" name="share">Share</button>
+    <aside></aside>
   </article>
   </div>
 </div>
