--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
       <dt>Total played</dt>
       <dd>99</dd>
     </dl>
-    <textarea readonly id="zigga">GAME 1 🤖👻🟧🟧▪️▫️◾️</textarea>
+    <textarea readonly name="game-result">GAME 1 🤖👻🟧🟧▪️▫️◾️</textarea>
+    <div>
     <button class="share" name="share">Share</button>
     <aside></aside>
+    </div>
   </article>
   </div>
 </div>
