--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 <footer>
   <nav>
     <ol>
-      <li><button class="tertiary" name="hint">HINT</button></li>
+      <li><button class="tertiary" name="hint">HINT </button></li>
       <li>
-      <button class="tertiary" name="delete">DELETE</button>
-        <button name="enter">ENTER</button>
+      <button class="tertiary" name="delete">DELETE &#10005;</button>
+        <button name="enter">ENTER &#9166;</button>
       </li>
-      <li><button class="tertiary" name="shuffle">SHUFFLE</button</li>
+      <li><button class="tertiary" name="shuffle">SHUFFLE &#8634;</button</li>
     </ol>
   </nav>
 </footer>
