--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </header>
 <article>
   <div class="svg-container">
-    <svg viewBox="0 0 100 100">
-  
+    <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
     <g transform="translate(50, 5)">
       <text id="plum" alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="0" y="0">NICE
       <animate
@@ -25,6 +24,22 @@
         fill="freeze"
         dur="4s"
         values="-100;0;0;0;100"
+        keySplines="
+            0.1 0.8 0.2 1;
+            0.1 0.8 0.2 1;
+            0.4 0.8 0.2 1;
+            0.9 0.3 0.8 1"
+        calcMode="spline"
+        repeatCount="indefinite"
+      />
+      <animate
+        id="plum-animate-skew"
+        attributeName="skewX"
+        from="-10"
+        to="10"
+        begin="0s"
+        dur="4s"
+        values="-10;0;0;0;10"
         keySplines="
             0.1 0.8 0.2 1;
             0.1 0.8 0.2 1;
