--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             0.4 0.8 0.2 1;
             0.9 0.3 0.8 1"
         calcMode="spline"
-        repeatCount="indefinite"
       />
       <animateTransform
         id="plum-animate-skew"
@@ -47,8 +46,7 @@
             0.1 0.8 0.2 1;
             0.4 0.8 0.2 1;
             0.9 0.3 0.8 1"
-        calcMode="spline"
-        repeatCount="indefinite" />
+        calcMode="spline" />
       
       <animate
         id="plum-animate-fade"
@@ -65,7 +63,6 @@
             0.4 0.8 0.2 1;
             0.9 0.3 0.8 1"
         calcMode="spline"
-        repeatCount="indefinite"
       />
       </text>
     </g>
