--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
   <article>
     <dl>
       <dt>Today's result</dt>
-      <dd>3/5</dd>
-      <dd>2 Hints</dd>
+      <dd id="today-score">3/8</dd>
+      <dd id="today-hints">2/3 Hints</dd>
       <dt>Streak</dt>
-      <dd>Current 3</dd>
-      <dd>All-time 10</dd>
+      <dd id="current-streak">Current 3</dd>
+      <dd id="all-time-streak">All-time 10</dd>
       <dt>Total played</dt>
-      <dd>99</dd>
+      <dd id="total-played">99</dd>
     </dl>
     <textarea readonly name="game-result">GAME 1</textarea>
     <div>
