--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="svg-container">
     <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
     <g transform="translate(50, 5)">
-      <text id="plum" alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="-100" y="0">NICE
+      <text id="plum" alignment-baseline="middle" dominant-baseline="central" text-anchor="middle" x="-100" y="0"><tspan>NICE</tspan>
       <animate
         id="plum-animate"
         attributeName="x"
