--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <header>
   <nav>
     <ol>
-      <li>GAME 1</li>
+      <li id="game-no">GAME 1</li>
       <li>ZIGGAWORDS</li>
       <li><button class="secondary" name="stats">
           STATS
